# langchain-agents

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  readme.md
agents/: __init__.py  weather_agent.py
app/: __init__.py  config.py  dependencies.py  errors.py  main.py  observability.py
app/api/: chat.py  documents.py  health.py
app/conversations/: __init__.py  service.py  store.py
app/evaluation/: __init__.py  evaluator.py  models.py  run_evaluation.py
app/generation/: __init__.py  chat_model.py  inspect_answer.py  prompts.py  rag_service.py
app/ingestion/: __init__.py  inspect_chunks.py  inspect_documents.py  loaders.py  splitter.py
app/retrieval/: __init__.py  embeddings.py  inspect_search.py  vector_store.py
app/schemas/: chat.py  documents.py  health.py
app/services/: __init__.py  document_service.py
data/evaluation/: dataset.json
docs/: module-1-backend-foundation.md  production-readiness.md
test_ui/: README.md  __init__.py  api_client.py  streamlit_app.py
tests/: test_chat.py  test_config.py  test_conversations.py  test_document_service.py  test_documents_api.py  test_errors.py  test_evaluation.py  test_health.py  test_loaders.py  test_observability.py  test_rag_service.py  test_splitter.py  test_ui_api_client.py  test_vector_store.py
tests/fixtures/documents/: guide.md  policy.txt  unsupported.csv
tests/integration/: test_rag_e2e.py
