[project]
name = "langchain-agents"
version = "0.1.0"
description = "LangChain agent experiments"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "langchain[openai]>=1.3.14",
    "langchain-anthropic>=1.5.0",
    "langchain-openai>=1.4.0",
]

[tool.uv]
package = false
