[project]
name = "langchain-agents"
version = "0.1.0"
description = "LangChain agent experiments"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.116.0",
    "langchain[openai]>=1.3.14",
    "langchain-anthropic>=1.5.0",
    "langchain-openai>=1.4.0",
    "pydantic-settings>=2.10.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
