[project]
name = "langchain-agents"
version = "0.1.0"
description = "LangChain agent experiments"
readme = "readme.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "langchain-chroma>=1.0.0",
    "langchain[openai]>=1.3.14",
    "langchain-anthropic>=1.5.0",
    "langchain-openai>=1.4.0",
    "langchain-text-splitters>=1.1.0",
    "onnxruntime<1.24; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "pydantic-settings>=2.10.0",
    "pypdf>=6.4.0",
    "python-multipart>=0.0.20",
    "streamlit>=1.47.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: opt-in tests that call real external services",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
